@@ -1,2 +1,2 @@
-This library is used to control DIYSandbox Arduino-based WiFi products.
-
+This library is used to control DIYSandbox Arduino-based WiFi products on both Arduino
+and chipKIT Uno32 and chipKIT Max32 (Max32 uses Serial1).  This version is experimental.
